--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "vanila-seed-project",
-  "version": "1.0.0",
-  "description": "",
+  "name": "vanilla-seed",
   "main": "index.js",
+  "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server --mode development --progress --color"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "babel": "^6.23.0",
-    "rxjs": "^6.6.3",
-    "typescript": "^4.1.3",
-    "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.1",
+    "ts-loader": "^5.0.0",
+    "typescript": "^3.0.0",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.0.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
