--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "start": "webpack-dev-server --mode development --progress --color"
   },
   "devDependencies": {
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "rxjs": "^6.6.3"
   }
 }
