--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --mode development --progress --color"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
     "style-loader": "^2.0.0",
